remove horizontal scrolling bug

--- a/src/components/navbarComponent/NavbarComponent.css
+++ b/src/components/navbarComponent/NavbarComponent.css
@@ -19,6 +19,7 @@
 	font-size: 0.8rem;
 	color: var(--gray-title);
 	text-shadow: 1px 1px 2px rgb(0 0 0 / 40%);
+	z-index: 10;
 }
 
 #header {
@@ -29,6 +30,18 @@
 	height: 207px !important;
 }
 
+#header:after {
+	content: ' ';
+	z-index: 1;
+	display: block;
+	position: absolute;
+	height: 207px;
+	left: 240px;
+	top: 0;
+	right: 0;
+	background: rgba(0, 0, 0, 0.3);
+}
+
 #text-greet {
 	text-shadow: 1px 1px 2px rgb(0 0 0 / 40%);
 	color: white !important;
@@ -37,14 +50,5 @@
 	text-overflow: ellipsis !important;
 	white-space: nowrap !important;
 	overflow: hidden !important;
-}
-
-#color-overlay {
-	position: absolute;
-	top: 0;
-	left: 240px;
-	width: 100%;
-	height: 207px;
-	background-color: black;
-	opacity: 0.3;
+	z-index: 10;
 }
