--- a/src/features/note/Note.css
+++ b/src/features/note/Note.css
@@ -19,6 +19,7 @@
 	margin: 1rem 0.5rem;
 	padding: 1rem;
 	box-shadow: rgb(0 0 0 / 15%) 2.4px 2.4px 3.2px;
+	z-index: 2;
 }
 
 .row-scratchpad-add {
