--- a/src/forms/userAccountForm/UserAccountForm.css
+++ b/src/forms/userAccountForm/UserAccountForm.css
@@ -11,6 +11,7 @@
 	width: 100%;
 	border-radius: 8px !important;
 	padding: 1.5rem;
+	z-index: 2;
 }
 
 .profile-picture-card .ant-card-body {
